# H2-P2-Todo-webapp

./: pyproject.toml
backend/src/: main.py
frontend/src/app/: globals.css
frontend/src/app/dashboard/: layout.tsx
frontend/src/lib/: api-client.ts
src/: main.py
